fix spacing in info window

--- a/src/app/map/map.page.scss
+++ b/src/app/map/map.page.scss
@@ -4,5 +4,10 @@ agm-map {
 
 ion-avatar {
   margin: auto;
-  margin-bottom: 10px;
+  margin-bottom: 7px;
+}
+
+p {
+  margin: 0;
+  margin-top: 4px;
 }
